==> MartinDlugozh/esp8266_sys/lib-stm/stm32f1_fatfs/diskio.c <==
#include "stm32f10x.h"
#include "stm32f10x_gpio.h"
#include "stm32f10x_rcc.h"
#include "stm32f10x_spi.h"
#include "diskio.h"
#define STM32_USE_DMA 1
#define DISKIO_SPI_PORT 1
#define GPIO_CS                 GPIOA
#define RCC_APB2Periph_GPIO_CS  RCC_APB2Periph_GPIOA
#define DISKIO_PIN_CS           GPIO_Pin_4
#define GPIO_PWR                GPIOA
#define RCC_APB2Periph_GPIO_PWR RCC_APB2Periph_GPIOA
#define DISKIO_PIN_PWR          GPIO_Pin_3
#define DISKIO_SPI 				SPI1
#define DISKIO_GPIO_PORT		GPIOA
#define DISKIO_SCK				GPIO_Pin_5
#define DISKIO_MISO				GPIO_Pin_6
#define DISKIO_MOSI				GPIO_Pin_7
#define GPIO_CS                 GPIOB
#define RCC_APB2Periph_GPIO_CS  RCC_APB2Periph_GPIOB
#define DISKIO_PIN_CS           GPIO_Pin_12
#define GPIO_PWR                GPIOB
#define RCC_APB2Periph_GPIO_PWR RCC_APB2Periph_GPIOB
#define DISKIO_PIN_PWR          GPIO_Pin_11
#define DISKIO_SPI 				SPI2
#define DISKIO_GPIO_PORT		GPIOB
#define DISKIO_SCK				GPIO_Pin_13
#define DISKIO_MISO				GPIO_Pin_14
#define DISKIO_MOSI				GPIO_Pin_15
#define GPIO_Mode_PWR            GPIO_Mode_Out_OD /* pull-up resistor at power FET */
#define CMD0	(0x40+0)	/* GO_IDLE_STATE */
#define CMD1	(0x40+1)	/* SEND_OP_COND (MMC) */
#define ACMD41	(0xC0+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(0x40+8)	/* SEND_IF_COND */
#define CMD9	(0x40+9)	/* SEND_CSD */
#define CMD10	(0x40+10)	/* SEND_CID */
#define CMD12	(0x40+12)	/* STOP_TRANSMISSION */
#define ACMD13	(0xC0+13)	/* SD_STATUS (SDC) */

static
void power_on (void)
{
	SPI_InitTypeDef  SPI_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;
	volatile BYTE dummyread;

	/* Enable SPI1 and GPIO clocks */
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, 	ENABLE);
#if(DISKIO_SPI_PORT == 1)
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);
#elif(DISKIO_SPI_PORT == 2)
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);
#endif
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIO_CS | RCC_APB2Periph_GPIO_PWR, ENABLE);

	/* Configure I/O for Power FET */
	GPIO_InitStructure.GPIO_Pin = DISKIO_PIN_PWR;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_PWR;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIO_PWR, &GPIO_InitStructure);

	PWR_ON();

	for (Timer1 = 25; Timer1; );	/* Wait for 250ms */

	/* Configure I/O for Flash Chip select */
	GPIO_InitStructure.GPIO_Pin = DISKIO_PIN_CS;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIO_CS, &GPIO_InitStructure);

	/* Deselect the Card: Chip Select high */
	DESELECT();

	/* Configure SPIx pins: SCK and MOSI with default alternate function (not remapped) push-pull */
	GPIO_InitStructure.GPIO_Pin = DISKIO_SCK | DISKIO_MOSI;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init(DISKIO_GPIO_PORT, &GPIO_InitStructure);

	/* Configure MISO as Input with internal pull-up */
	GPIO_InitStructure.GPIO_Pin = DISKIO_MISO;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
	GPIO_Init(DISKIO_GPIO_PORT, &GPIO_InitStructure);

	/* SPIx configuration */
	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256; // 72000kHz/256=281kHz < 400Hz SPI_BaudRatePrescaler_256
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(DISKIO_SPI, &SPI_InitStructure);

	SPI_CalculateCRC(DISKIO_SPI, DISABLE);

	/* Enable SPIx  */
	SPI_Cmd(DISKIO_SPI, ENABLE);

	/* drain SPI */
	while (SPI_I2S_GetFlagStatus(DISKIO_SPI, SPI_I2S_FLAG_TXE) == RESET) { ; }
	dummyread = SPI_I2S_ReceiveData(DISKIO_SPI);

#ifdef STM32_USE_DMA
	/* enable DMA clock */
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);
#endif
}

static
void power_off (void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	if (!(Stat & STA_NOINIT)) {
		SELECT();
		wait_ready();
		release_spi();
	}

	SPI_Cmd(DISKIO_SPI, DISABLE);
	SPI_I2S_DeInit(DISKIO_SPI);
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, DISABLE);

	/* All SPI-Pins to input with weak internal pull-downs */
	GPIO_InitStructure.GPIO_Pin = DISKIO_SCK | DISKIO_MOSI | DISKIO_MISO;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPD;
	GPIO_Init(DISKIO_GPIO_PORT, &GPIO_InitStructure);
	/* Chip select internal pull-down too */
	GPIO_InitStructure.GPIO_Pin = DISKIO_PIN_CS;
	GPIO_Init(GPIO_CS, &GPIO_InitStructure);

	PWR_OFF();

	Stat |= STA_NOINIT;		/* Set STA_NOINIT */
}
